--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "babel-loader": "8.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
