--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "seed": "node seed.js",
     "server": "nodemon app.js",
     "server:debug": "nodemon --inspect  app.js",
     "frontend-install": "npm install --prefix frontend",
