--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "8.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
+    "newrelic": "^5.10.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react-redux": "^7.0.3",
@@ -29,8 +31,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "validator": "^10.11.0",
-    "babel-loader": "8.0.5"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
