--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socialq",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Social Q's",
   "main": "app.js",
   "scripts": {
@@ -20,9 +20,9 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.7",
+    "mongoose": "^5.6.1",
     "newrelic": "^5.10.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -34,6 +34,14 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0"
-  }
+    "nodemon": "^1.19.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johnsonphan95/socialq2.0.git"
+  },
+  "bugs": {
+    "url": "https://github.com/johnsonphan95/socialq2.0/issues"
+  },
+  "homepage": "https://github.com/johnsonphan95/socialq2.0#readme"
 }
